--- a/Immoc_business/build.gradle
+++ b/Immoc_business/build.gradle
@@ -1,4 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: this.rootProject.file('imooc.gradle')
 buildscript {
     ext.kotlin_version = '1.5.10'
     repositories {
