首页框架大家、maven私服搭建

--- a/Immoc_business/gradle.properties
+++ b/Immoc_business/gradle.properties
@@ -17,3 +17,8 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+NEXUS_REPOSITORY_URL=http://localhost:8081/repository/imooc_snapshots/
+POM_GROUPID=com.imook.android
+POM_PACKAGING=aar
+NEXUS_USERNAME=admin
+NEXUS_PASSWORD=admin123
