首页结构初始化

--- a/Immoc_business/immoc_voice/build.gradle
+++ b/Immoc_business/immoc_voice/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     compileSdkVersion this.rootProject.android.compileSdkVersion
-    buildToolsVersion "30.0.3"
+    buildToolsVersion this.rootProject.android.buildToolsVersion
 
     defaultConfig {
         applicationId this.rootProject.android.applicationId
