--- a/Immoc_business/app/src/main/AndroidManifest.xml
+++ b/Immoc_business/app/src/main/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.immoc_business">
+    package="com.example.imooc_business">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true">
-        <activity android:name=".MainActivity">
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity android:name="com.example.imooc_business.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
