--- a/Immoc_business/build.gradle
+++ b/Immoc_business/build.gradle
@@ -1,11 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+//引入根工程下的统一版本管理文件
 apply from: this.rootProject.file('imooc.gradle')
+
 buildscript {
     ext.kotlin_version = '1.5.10'
     repositories {
         google()
         jcenter()
         mavenCentral()
+
+        maven {
+            url "https://jitpack.io"
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.0"
@@ -21,6 +28,10 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
 
