--- a/Immoc_business/gradle.properties
+++ b/Immoc_business/gradle.properties
@@ -14,7 +14,6 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app"s APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
-android.useAndroidX=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 NEXUS_REPOSITORY_URL=http://localhost:8081/repository/imooc_snapshots/
@@ -22,3 +21,9 @@ POM_GROUPID=com.imook.android
 POM_PACKAGING=aar
 NEXUS_USERNAME=admin
 NEXUS_PASSWORD=admin123
+
+# 需要在gradle.properties中添加下面两行代码
+# 这是因为混合支持库。通过添加这些行选择androidX作为您的支持库
+android.useAndroidX=true
+android.enableJetifier=true
+
